--- a/src/app/language-feature/language-form/language-form.component.html
+++ b/src/app/language-feature/language-form/language-form.component.html
@@ -8,8 +8,8 @@
       <div class="space-y-8 divide-y divide-gray-200 ">
         <div class="pt-8 pb-4">
           <h3 class="text-lg leading-6 text-bold font-large text-white text-3xl mb-4">Language</h3>
-          <p *ngIf="mode === 'add'" class="mt-1 text-lg text-white">add a new education to your CV <span class="text-sm">(added educations are automatically set to active)</span></p>
-          <p *ngIf="mode === 'edit'" class="mt-1 text-lg text-white">change one of your educations <span class="text-sm">(be sure to submit your changes)</span></p>
+          <p *ngIf="mode === 'add'" class="mt-1 text-lg text-white">add a new language to your CV <span class="text-sm">(added languages are automatically set to active)</span></p>
+          <p *ngIf="mode === 'edit'" class="mt-1 text-lg text-white">change one of your languages <span class="text-sm">(be sure to submit your changes)</span></p>
 
           <hr>
 
