--- a/src/app/experience-feature/experience-form/experience-form.component.html
+++ b/src/app/experience-feature/experience-form/experience-form.component.html
@@ -7,9 +7,9 @@
     <form [formGroup]="experienceForm" (ngSubmit)="onSubmit()" class="space-y-8 divide-y divide-gray-200 ">
       <div class="space-y-8 divide-y divide-gray-200 ">
         <div class="pt-8 pb-4">
-          <h3 class="text-lg leading-6 text-bold font-large text-white text-3xl mb-4">Education</h3>
-          <p *ngIf="mode === 'add'" class="mt-1 text-lg text-white">add a new education to your CV <span class="text-sm">(added educations are automatically set to active)</span></p>
-          <p *ngIf="mode === 'edit'" class="mt-1 text-lg text-white">change one of your educations <span class="text-sm">(be sure to submit your changes)</span></p>
+          <h3 class="text-lg leading-6 text-bold font-large text-white text-3xl mb-4">Experience</h3>
+          <p *ngIf="mode === 'add'" class="mt-1 text-lg text-white">add a new Experience to your CV <span class="text-sm">(added Experiences are automatically set to active)</span></p>
+          <p *ngIf="mode === 'edit'" class="mt-1 text-lg text-white">change one of your Experiences <span class="text-sm">(be sure to submit your changes)</span></p>
 
           <hr>
 
@@ -53,7 +53,7 @@
                 <input placeholder="name of the company" type="text" name="company" id="company" formControlName="company" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
                 <div *ngIf="experienceForm.get('company')?.dirty && experienceForm.get('company')?.touched && experienceForm.get('company')?.hasError('required')"
                      class="text-white text-sm italic">
-                  Employer name is required.
+                  Company name is required.
                 </div>
               </div>
             </div>
