--- a/src/app/language-feature/language-form/language-form.component.html
+++ b/src/app/language-feature/language-form/language-form.component.html
@@ -26,7 +26,7 @@
             </div>
           </div>
 
-          <div class="sm:col-span-3 mt-4">
+          <div class="sm:col-span-3 mt-4" [ngClass]="languageForm.value.nativeLanguage ? 'hidden': ''">
             <label for="reading" class="block text-sm font-medium text-white">Reading</label>
             <div class="mt-1">
               <select placeholder="level of reading"
@@ -45,7 +45,7 @@
             </div>
           </div>
 
-          <div class="sm:col-span-3 mt-4">
+          <div class="sm:col-span-3 mt-4" [ngClass]="languageForm.value.nativeLanguage ? 'hidden': ''">
             <label for="reading" class="block text-sm font-medium text-white">Writing</label>
             <div class="mt-1">
               <select placeholder="level of writing"
@@ -64,7 +64,7 @@
             </div>
           </div>
 
-          <div class="sm:col-span-3 mt-4">
+          <div class="sm:col-span-3 mt-4" [ngClass]="languageForm.value.nativeLanguage ? 'hidden': ''">
             <label for="reading" class="block text-sm font-medium text-white">Speaking</label>
             <div class="mt-1">
               <select placeholder="level of speaking"
@@ -87,8 +87,9 @@
             <input type="checkbox" name="nativeLanguage" id="nativeLanguage" formControlName="nativeLanguage"
                    class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
             <span class="ml-8">
-          <span  *ngIf="languageForm.value.nativeLanguage === false" class="text-lg font-bold text-Jblue ">Native Language </span>
-          <span  *ngIf="languageForm.value.nativeLanguage === true" class="text-lg font-bold text-Jorange ">Native Language </span></span>
+          <span class="text-lg font-bold text-Jblue ">Native Language </span>
+<!--          <span  *ngIf="languageForm.value.nativeLanguage === true" class="text-lg font-bold text-Jorange ">Native Language </span>-->
+            </span>
           </div>
 
 
@@ -99,7 +100,7 @@
 
           <div class="flex justify-around mt-8">
             <div>
-              <button type="submit" name="submitButton" [disabled]="!languageForm.valid"  class="justify-center hover:bg-Jorange bg-white items-center h-10 w-48 rounded-xl mb-4">
+              <button type="submit" name="submitButton" [disabled]="!languageForm.valid && languageForm.value.nativeLanguage === false"  class="justify-center hover:bg-Jorange bg-white items-center h-10 w-48 rounded-xl mb-4">
                 <p class="text-Jblue hover:text-white font-bold text-2xl">Submit</p>
               </button>
             </div>
