--- a/src/app/invites/registration.component.html
+++ b/src/app/invites/registration.component.html
@@ -3,8 +3,8 @@
     <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="space-y-8 divide-y divide-gray-200 ">
       <div class="space-y-8 divide-y divide-gray-200 ">
         <div class="pt-8 pb-4">
-          <h3 class="text-lg leading-6 text-bold font-large text-white text-3xl mb-4">Contact info</h3>
-          <p class="mt-1 text-lg text-white"> Change you personal information <span class="text-sm">(make sure to press submit after every change)</span></p>
+          <h3 class="text-lg leading-6 text-bold font-large text-white text-3xl mb-4">Invite a new candidate</h3>
+          <p class="mt-1 text-lg text-white"> Type in the email address of the new candidate</p>
           <hr>
 
 
