--- a/src/app/language-feature/language/language.component.html
+++ b/src/app/language-feature/language/language.component.html
@@ -21,7 +21,7 @@
         </div>
 
       </div>
-      <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
+      <div class="border-t border-gray-200 px-4 py-5 sm:px-6" *ngIf="!language.nativeLanguage">
         <dl class="grid grid-cols-1 gap-x-3 gap-y-8 sm:grid-cols-3">
           <div class="sm:col-span-1">
             <dt class="text-md font-bold text-white">Readig:</dt>
@@ -37,6 +37,14 @@
           </div>
         </dl>
       </div>
+
+
+      <div class="border-t border-gray-200 px-4 py-5 sm:px-6" *ngIf="language.nativeLanguage">
+        <h3 class="text-xl leading-6 font-bold text-white">Native language</h3>
+      </div>
+
+
+
       <div class="flex justify-between">
         <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
           <input type="checkbox" (click)="toggleActive(language)"  *ngIf="language.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
