--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -8,7 +8,7 @@
         <img class="h-12 w-auto grow" src="../../assets/logo_round.png" alt="Workflow">
       </a>
     </div>
-    <nav  class="absolute inset-y-0 right-0 pr-4 flex items-center sm:pr-6 md:hidden">
+    <nav *ngIf="(user$ | async)?.firstLogin === false"  class="absolute inset-y-0 right-0 pr-4 flex items-center sm:pr-6 md:hidden">
       <button (click)="openNav()" type="button" class="-mr-2 inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-600">
         <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
@@ -54,9 +54,9 @@
       </nav>
   </header>
   <!-- Bottom section -->
-  <div  class="min-h-0 flex-1 flex overflow-hidden">
+  <div   class="min-h-0 flex-1 flex overflow-hidden">
     <!-- Narrow sidebar-->
-    <nav *ngIf="isLoggedIn == true ||(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" [ngClass]="!isExtendSideBar ? '': 'w-60 sidebar'" class="hidden md:block md:flex-shrink-0 md:bg-Jorange md:overflow-y-auto" aria-label="Sidebar">
+    <nav *ngIf="(user$ | async)?.firstLogin === false || isLoggedIn == true ||(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" [ngClass]="!isExtendSideBar ? '': 'w-60 sidebar'" class="hidden md:block md:flex-shrink-0 md:bg-Jorange md:overflow-y-auto" aria-label="Sidebar">
       <div class="relative w-20 flex flex-col p-3 space-y-3">
 
         <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/dashboard'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  [routerLinkActive]="['bg-JorangeSelect']"
@@ -135,7 +135,7 @@
       </div>
     </nav>
 
-    <div class="bgImage hidden md:block md:flex-shrink-0 md:bg-Jorange">
+    <div *ngIf="(user$ | async)?.firstLogin === false" class="bgImage hidden md:block md:flex-shrink-0 md:bg-Jorange">
     <button *ngIf="isLoggedIn" (click)="toggleSideBar()" class="ontop bg-Jorange hover:bg-white hover:border-Jorange border-white border-2 hover:text-Jorange text-white h-8 w-8 justify-center rounded-lg">
       <fa-icon *ngIf="isExtendSideBar" [icon]="faAngleLeft"></fa-icon>
       <fa-icon *ngIf="!isExtendSideBar" [icon]="faAngleRight"></fa-icon>
@@ -148,8 +148,6 @@
       <section aria-labelledby="primary-heading" class="min-w-0 flex-1 h-full flex flex-col overflow-y-auto lg:order-last">
         <h1 id="primary-heading" class="sr-only">Home</h1>
           <router-outlet></router-outlet>
-
-
       </section>
     </main>
   </div>
