--- a/src/app/skill-feature/skill-form/skill-form.component.html
+++ b/src/app/skill-feature/skill-form/skill-form.component.html
@@ -8,9 +8,9 @@
       <div class="space-y-8 divide-y divide-gray-200 ">
         <div class="pt-8 pb-4">
           <h3 class="text-lg leading-6 text-bold font-large text-white text-3xl mb-4">Skill</h3>
-          <p *ngIf="mode === 'add'" class="mt-1 text-lg text-white">add a new education to your CV <span
-            class="text-sm">(added educations are automatically set to active)</span></p>
-          <p *ngIf="mode === 'edit'" class="mt-1 text-lg text-white">change one of your educations <span
+          <p *ngIf="mode === 'add'" class="mt-1 text-lg text-white">add a new skill to your CV <span
+            class="text-sm">(added skills are automatically set to active)</span></p>
+          <p *ngIf="mode === 'edit'" class="mt-1 text-lg text-white">change one of your skills <span
             class="text-sm">(be sure to submit your changes)</span></p>
 
           <hr>
@@ -66,10 +66,8 @@
     </form>
 
     <h3 class="text-lg leading-6 text-bold font-large text-white text-3xl mb-4">Skill Items</h3>
-    <p *ngIf="mode === 'add'" class="mt-1 text-lg text-white">add some sub skills to explain your better explain your
-      skill <span class="text-sm">(added educations are automatically set to active)</span></p>
-    <p *ngIf="mode === 'edit'" class="mt-1 text-lg text-white">change or add some sub skills to explain your better
-      explain your skill <span class="text-sm">(be sure to submit your changes)</span></p>
+    <p class="mt-1 text-lg text-white">add some sub skills to explain your better explain your
+      skill <span class="text-sm">(added educations are automatically set to active)</span>
 
     <hr>
 
@@ -85,88 +83,88 @@
           <button (click)="onEdit(skillItem)" class="text-white rounded-xl w-10 h-10 hover:bg-Jorange">
             <fa-icon transform="grow-12" [icon]="faPencil"></fa-icon>
           </button>
-
-          <!--                        skill item modal-->
-          <div *ngIf="editSkillIem" class="container flex justify-center mx-auto">
-            <div class="absolute inset-0 flex items-center justify-center bg-gray-700 bg-opacity-50">
-              <div class="max-w-2xl p-6 bg-gradient-to-b border-2 border-white from-indigo-600 to-Jblue rounded-xl">
-                <div class="flex items-center justify-between ">
-                  <form [formGroup]="skillItemForm" (ngSubmit)="onSkillItemSubmit()" class="space-y-8 divide-y divide-gray-200 ">
-                    <div class="space-y-8 divide-y divide-gray-200 ">
-                      <div class="pt-8 pb-4">
-                        <h3 (click)="onClose()" class="text-lg leading-6 text-bold font-large text-white text-3xl mb-4">
-                          {{skillItemForm.value.name}}</h3>
-                        <p *ngIf="mode === 'add'" class="mt-1 text-lg text-white">add a new education to your CV <span
-                          class="text-sm">(added educations are automatically set to active)</span></p>
-                        <p *ngIf="mode === 'edit'" class="mt-1 text-lg text-white">change one of your educations <span
-                          class="text-sm">(be sure to submit your changes)</span></p>
-
-                        <hr>
-
-                        <div class="sm:col-span-3 mt-4">
-                          <label for="name" class="block text-sm font-medium text-white">Name</label>
-                          <div class="mt-1">
-                            <input placeholder="name of skillItem"
-                                   required type="text" name="skillItemName" id="skillItemName" formControlName="name"
-                                   class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
-                            <div
-                              *ngIf="skillForm.get('name')?.dirty && skillForm.get('name')?.touched && skillForm.get('name')?.hasError('required')"
-                              class="text-white text-sm italic">
-                              Skill name is required.
-                            </div>
-                          </div>
-                        </div>
-
-                        <div class="sm:col-span-6 mt-4">
-                          <label for="description" class="block text-sm font-medium text-white">Description</label>
-                          <div class="mt-1">
-              <textarea placeholder="some extra information about your education" id="skillItemDescription" name="skillItemDescription"
-                        formControlName="description" rows="3"
-                        class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
-                          </div>
-                        </div>
-
-                        <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
-                          <diV hidden>
-                            <input type="text" name="skillItemCandidateId" id="skillItemCandidateId" formControlName="candidateId">
-                            <input type="checkbox" name="skillId" id="skillId" formControlName="skillId">
-                          </diV>
-
-                        </div>
-                        <div class="flex justify-around mt-8">
-                          <div>
-                            <button type="submit" name="submitButton" [disabled]="!skillItemForm.valid"
-                                    class="justify-center hover:bg-Jorange bg-white items-center h-10 w-48 rounded-xl mb-4">
-                              <p class="text-Jblue hover:text-white font-bold text-2xl">Submit</p>
-                            </button>
-                          </div>
-
-                          <div>
-                            <button (click)="onClose()"
-                                    class="justify-center bg-white hover:bg-Jorange  items-center h-10 w-48 rounded-xl mb-4">
-                              <p class="text-red-600 hover:text-white font-bold text-2xl">Cancel</p>
-                            </button>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
       </div>
-
+    </div>
       <button (click)="onAdd()" name="skillItemButton"
               class="justify-center hover:bg-Jorange bg-white items-center h-10 w-48 rounded-xl mb-4">
         <p class="text-Jblue hover:text-white font-bold text-2xl">Add</p>
       </button>
+  </div>
 
+
+    <!--                        skill item modal-->
+    <div *ngIf="editSkillIem" class="container flex justify-center mx-auto">
+      <div class="absolute inset-0 flex items-center justify-center bg-gray-700 bg-opacity-50">
+        <div class="max-w-2xl p-6 bg-gradient-to-b border-2 border-white from-indigo-600 to-Jblue rounded-xl">
+          <div class="flex items-center justify-between ">
+            <form [formGroup]="skillItemForm" (ngSubmit)="onSkillItemSubmit()"
+                  class="space-y-8 divide-y divide-gray-200 ">
+              <div class="space-y-8 divide-y divide-gray-200 ">
+                <div class="pt-8 pb-4">
+                  <h3 (click)="onClose()" class="text-lg leading-6 text-bold font-large text-white text-3xl mb-4">
+                    {{skillItemForm.value.name}}</h3>
+                  <p *ngIf="mode === 'add'" class="mt-1 text-lg text-white">add or change a sub skill of your CV
+                  </p>
+
+                  <hr>
+
+                  <div class="sm:col-span-3 mt-4">
+                    <label for="name" class="block text-sm font-medium text-white">Name</label>
+                    <div class="mt-1">
+                      <input placeholder="name of skillItem"
+                             required type="text" name="skillItemName" id="skillItemName" formControlName="name"
+                             class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+                      <div
+                        *ngIf="skillForm.get('name')?.dirty && skillForm.get('name')?.touched && skillForm.get('name')?.hasError('required')"
+                        class="text-white text-sm italic">
+                        Sub skill name is required.
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="sm:col-span-6 mt-4">
+                    <label for="description" class="block text-sm font-medium text-white">Description</label>
+                    <div class="mt-1">
+              <textarea placeholder="some extra information about your education" id="skillItemDescription"
+                        name="skillItemDescription"
+                        formControlName="description" rows="3"
+                        class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
+                    </div>
+                  </div>
+
+                  <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+                    <diV hidden>
+                      <input type="text" name="skillItemCandidateId" id="skillItemCandidateId"
+                             formControlName="candidateId">
+                      <input type="checkbox" name="skillId" id="skillId" formControlName="skillId">
+                    </diV>
+
+                  </div>
+                  <div class="flex justify-around mt-8">
+                    <div>
+                      <button type="submit" name="submitButton" [disabled]="!skillItemForm.valid"
+                              class="justify-center hover:bg-Jorange bg-white items-center h-10 w-48 rounded-xl mb-4">
+                        <p class="text-Jblue hover:text-white font-bold text-2xl">Submit</p>
+                      </button>
+                    </div>
+
+                    <div>
+                      <button (click)="onClose()"
+                              class="justify-center bg-white hover:bg-Jorange  items-center h-10 w-48 rounded-xl mb-4">
+                        <p class="text-red-600 hover:text-white font-bold text-2xl">Cancel</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
 
   </div>
+
 </div>
 
 
