--- a/src/app/dashboard-feature/cv-template/cv-template.component.scss
+++ b/src/app/dashboard-feature/cv-template/cv-template.component.scss
@@ -10,3 +10,9 @@
   -webkit-print-color-adjust: exact;
   print-color-adjust: exact;
 }
+
+
+.scroll-container {
+  height: 750px;
+  overflow: auto;
+}
