--- a/src/app/dashboard-feature/dashboard/dashboard.component.html
+++ b/src/app/dashboard-feature/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 
 
             <app-candidates [ngClass]="company === true && candidate === true ? '2xl:w-3/4 flex':''" *ngIf="company === true"></app-candidates>
-            <app-cv-template  [ngClass]="company === true && candidate === true ? '2xl:ml-[-230px] 2xl:w-1/2':''" *ngIf="candidate === true"></app-cv-template>
+            <app-cv-template  [ngClass]="company === true && candidate === true ? '2xl:ml-[-230px]':''" *ngIf="candidate === true"></app-cv-template>
 
         </div>
       </main>
