--- a/src/app/dashboard-feature/company/candidates/candidates.component.html
+++ b/src/app/dashboard-feature/company/candidates/candidates.component.html
@@ -3,8 +3,8 @@
     <div *ngFor="let candidate of myCandidates$ | async"
          class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6 mb-4">
       <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
-        <div class="flex flex-row">
-          <div class="basis-[97%]">
+        <div class="flex justify-between ">
+
             <button
               (click)="selectCandidate(candidate.candidateId)"
               [ngClass]="candidate.candidateId === currentCandidate ? 'flex bg-white items-center hover:bg-Jorange hover:text-white text-Jorange':'text-white hover:text-Jorange hover:bg-white'"
@@ -13,13 +13,14 @@
                 {{candidate.firstname}} {{candidate.lastname}}
               </h3>
             </button>
-          </div>
-          <div class="flex justify-between">
-            <div class="flex bg-white items-center h-10 w-40 rounded-xl ml-4">
-              <input type="checkbox" *ngIf="candidate.active === false"
+
+
+          <div class="flex justify-between ">
+            <div class="flex bg-white items-center h-10 w-40 rounded-xl">
+              <input type="checkbox" (click)="toggleActive(candidate)" *ngIf="candidate.active === false"
                      class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange"
                      role="switch">
-              <input type="checkbox" *ngIf="candidate.active === true" checked
+              <input type="checkbox" (click)="toggleActive(candidate)" *ngIf="candidate.active === true" checked
                      class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange"
                      role="switch">
 
@@ -29,7 +30,8 @@
   </span>
             </div>
           </div>
-        </div>
+
+          </div>
       </div>
 
 
