--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div class="h-full flex flex-col">
   <!-- Top nav-->
-  <header *ngIf="isLoggedIn == true ||(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" class="flex-shrink-0 relative h-20 bg-Jblue flex items-center">
+  <header *ngIf="isLoggedIn == true && (user$ | async)?.firstLogin === false && (user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" class="flex-shrink-0 relative h-20 bg-Jblue flex items-center">
 
         <div class="md:flex-shrink-0 flex items-center justify-end h-20 w-80 rounded-br-full rounded-tr-full bg-indigo-500 ">
      <h1 class="font-bold text-white mr-4 ml-4">{{ (user$ | async)?.firstname }} {{ (user$ | async)?.lastname }}</h1>
@@ -56,7 +56,7 @@
   <!-- Bottom section -->
   <div   class="min-h-0 flex-1 flex overflow-hidden">
     <!-- Narrow sidebar-->
-    <nav *ngIf="(user$ | async)?.firstLogin === false || isLoggedIn == true ||(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" [ngClass]="!isExtendSideBar ? '': 'w-60 sidebar'" class="hidden md:block md:flex-shrink-0 md:bg-Jorange md:overflow-y-auto" aria-label="Sidebar">
+    <nav *ngIf="isLoggedIn == true && (user$ | async)?.firstLogin === false && (user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" [ngClass]="!isExtendSideBar ? '': 'w-60 sidebar'" class="hidden md:block md:flex-shrink-0 md:bg-Jorange md:overflow-y-auto" aria-label="Sidebar">
       <div class="relative w-20 flex flex-col p-3 space-y-3">
 
         <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/dashboard'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  [routerLinkActive]="['bg-JorangeSelect']"
@@ -75,6 +75,12 @@
         <a *ngIf="(user$ | async)?.role === 'COMPANY'" [routerLink]="'/invite'" [routerLinkActive]="['bg-JorangeSelect']" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="hover:bg-JorangeSelect text-white flex-shrink-0 inline-flex items-center justify-center h-14 mt-1 rounded-lg">
           <fa-icon transform="grow-18" [icon]="faMailForward"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">Invite Candidate</span>
+        </a>
+
+
+        <a *ngIf="(user$ | async)?.role === 'COMPANY'" [routerLink]="'/categories'" [routerLinkActive]="['bg-JorangeSelect']" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="hover:bg-JorangeSelect text-white flex-shrink-0 inline-flex items-center justify-center h-14 mt-1 rounded-lg">
+          <fa-icon transform="grow-18" [icon]="faShapes"></fa-icon>
+          <span *ngIf="isExtendSideBar" class="ml-6">Categories</span>
         </a>
 
 
@@ -135,7 +141,7 @@
       </div>
     </nav>
 
-    <div *ngIf="(user$ | async)?.firstLogin === false" class="bgImage hidden md:block md:flex-shrink-0 md:bg-Jorange">
+    <div *ngIf="isLoggedIn == true && (user$ | async)?.firstLogin === false && (user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" class="bgImage hidden md:block md:flex-shrink-0 md:bg-Jorange">
     <button *ngIf="isLoggedIn" (click)="toggleSideBar()" class="ontop bg-Jorange hover:bg-white hover:border-Jorange border-white border-2 hover:text-Jorange text-white h-8 w-8 justify-center rounded-lg">
       <fa-icon *ngIf="isExtendSideBar" [icon]="faAngleLeft"></fa-icon>
       <fa-icon *ngIf="!isExtendSideBar" [icon]="faAngleRight"></fa-icon>
